objects/Animal_LS_and_Type_To_Account_Field__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>- Used in the Animal Count  &amp; Lifestage trigger. 
- Acts as a rollup summary to populate the total amount of Animals for each Lifestage and Animal Type
- Used to calculate the amount of Annual Points on the opportunity based on the Lifestage selected for the Opportunity</description>
    <fields>
        <fullName>Account_Animal_Count_Field__c</fullName>
        <label>Account Animal Count Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amimal_Type__c</fullName>
        <label>Animal Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculated_VIP_Points__c</fullName>
        <description>The calculated VIP Points per Lifestage</description>
        <label>Calculated VIP Points</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Life_Stage__c</fullName>
        <label>Life Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Animal LS &amp; Type to Account Fields</label>
</CustomObject>